feat: 카테고리 관리 시스템 구현 및 더미 카테고리 마이그레이션
- Category 모델 추가 (Prisma schema)
- 카테고리 CRUD API 구현
- 더미 카테고리 24개 자동 마이그레이션
- 관리자 카테고리 관리 페이지 구현
- 2단계 삭제 확인 절차 (실수 방지)
- 관리자 대시보드에 '카테고리 관리' 버튼 추가
- 카테고리 필드: 이름, 슬러그, 설명, 이미지 URL, 아이콘, 순서

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "loading": "로딩 중...",
+    "error_occurred": "오류가 발생했습니다. 다시 시도해주세요.",
     "search": "검색",
     "filter": "필터",
     "sort": "정렬",
@@ -82,6 +83,12 @@
     "all_rights_reserved": "모든 권리 보유",
     "powered_by": "Powered by",
     "version": "버전",
+    "try_again": "다시 시도",
+    "start_shopping": "쇼핑 시작",
+    "deleting": "삭제 중...",
+    "delete_selected": "선택 항목 삭제",
+    "actions": "작업",
+    "date": "날짜",
     "language": "언어",
     "currency": "통화",
     "country": "국가",
@@ -488,5 +495,132 @@
     "return_policy": "반품 정책",
     "exchange_policy": "교환 정책",
     "satisfaction_guaranteed": "만족 보장"
+  },
+  "cart": {
+    "title": "장바구니",
+    "cart_summary": "장바구니 요약",
+    "sub_total": "소계",
+    "discount": "할인",
+    "shipping": "배송비",
+    "total_payment": "총 결제금액",
+    "free_shipping": "무료배송",
+    "free": "무료",
+    "congratulations_free_shipping": "🎉 축하합니다! 무료배송 대상입니다!",
+    "add_more_for_free_shipping": "무료배송을 위해 {{amount}} 더 추가하세요!",
+    "free_shipping_on_orders_over": "{{amount}} 이상 주문시 무료배송",
+    "select_address_to_checkout": "배송 주소를 선택하여 주문하세요",
+    "login_to_order": "주문하려면 로그인하세요",
+    "placing_order": "주문 처리 중...",
+    "place_order": "주문하기",
+    "shipping_address": "배송 주소",
+    "no_shipping_addresses": "저장된 배송 주소가 없습니다",
+    "add_shipping_address": "배송 주소 추가",
+    "add_new_address": "새 주소 추가",
+    "selected_address": "선택된 주소",
+    "default": "기본",
+    "change": "변경",
+    "collapse": "접기",
+    "please_select_address": "배송 주소를 선택하여 주문을 진행하세요",
+    "login_required": "로그인 필수",
+    "login_required_to_place_order": "주문을 완료하려면 로그인이 필요합니다",
+    "you_can_browse_and_add": "상품을 둘러보고 장바구니에 담을 수 있지만, 구매를 완료하고 결제하려면 로그인해야 합니다",
+    "sign_in_to_continue": "로그인하여 계속하기",
+    "please_sign_in_to_manage": "배송 주소를 관리하려면 로그인하세요"
+  },
+  "account": {
+    "my_account": "내 계정",
+    "manage_profile": "프로필 관리, 주소, 주문 및 계정 설정을 관리하세요",
+    "admin_dashboard": "관리자 대시보드",
+    "manage_system": "사용자, 주문, 분석 및 시스템 설정을 관리하세요",
+    "profile": "프로필",
+    "addresses": "배송 주소",
+    "orders": "주문 내역",
+    "payment": "결제 수단",
+    "notifications": "알림",
+    "settings": "설정",
+    "dashboard": "대시보드",
+    "select_section": "섹션 선택",
+    "manage_addresses": "배송 주소 관리",
+    "saved_addresses": "저장된 주소",
+    "order_history": "주문 내역",
+    "total_orders": "총 주문",
+    "payment_methods": "결제 수단",
+    "manage_payment": "저장된 결제 수단 및 청구 정보 관리",
+    "notification_settings": "알림 설정",
+    "manage_notifications": "알림을 받는 방식 관리",
+    "account_settings": "계정 설정",
+    "manage_security": "계정 보안 및 환경설정 관리",
+    "privacy_security": "개인정보 보호 및 보안",
+    "email_notifications": "이메일 알림",
+    "sms_notifications": "SMS 알림",
+    "order_updates": "주문 업데이트",
+    "promotions": "프로모션",
+    "receive_notifications": "알림 받기",
+    "save_preferences": "환경설정 저장",
+    "delete_account": "계정 삭제",
+    "delete_account_warning": "계정을 삭제하시겠습니까? 이 작업은 취소할 수 없습니다.",
+    "confirm_delete": "삭제 확인",
+    "account_deleted": "계정이 삭제되었습니다",
+    "loading_account": "계정 로딩 중...",
+    "loading_orders": "주문 로딩 중...",
+    "loading_settings": "설정 로딩 중...",
+    "no_orders": "주문 내역이 없습니다",
+    "no_addresses": "저장된 주소가 없습니다",
+    "no_payment_methods": "저장된 결제 수단이 없습니다",
+    "add_address": "주소 추가",
+    "edit_address": "주소 수정",
+    "delete_address": "주소 삭제",
+    "set_default": "기본 주소로 설정",
+    "recipient_name": "받는사람",
+    "phone_number": "전화번호",
+    "zip_code": "우편번호",
+    "address_detail": "상세주소",
+    "delivery_request": "배송 요청사항",
+    "entrance_code": "공동현관 출입번호",
+    "order_number": "주문번호",
+    "order_date": "주문일",
+    "order_status": "주문 상태",
+    "order_total": "주문 금액",
+    "order_items": "주문 상품",
+    "tracking_number": "추적번호",
+    "track_order": "주문 추적",
+    "cancel_order": "주문 취소",
+    "return_order": "반품 신청",
+    "view_details": "상세보기",
+    "pending": "대기 중",
+    "processing": "처리 중",
+    "shipped": "배송 중",
+    "delivered": "배송 완료",
+    "cancelled": "취소됨",
+    "returned": "반품됨",
+    "refunded": "환불됨",
+    "manage_addresses_desc": "배송 주소 추가, 수정 또는 제거",
+    "add_new_address": "새 주소 추가",
+    "no_addresses": "저장된 주소가 없습니다",
+    "no_addresses_desc": "아직 주소를 추가하지 않았습니다. 첫 번째 주소를 추가하여 시작하세요.",
+    "add_first_address": "첫 번째 주소 추가",
+    "default_address": "기본 배송지",
+    "edit_address": "주소 수정",
+    "track_manage_orders": "주문을 추적하고 관리하세요",
+    "error_loading_orders": "주문 로드 중 오류 발생",
+    "no_orders_yet": "아직 주문이 없습니다",
+    "no_orders_desc": "아직 주문을 하지 않으셨습니다. 쇼핑을 시작하여 주문 내역을 확인하세요.",
+    "order": "주문",
+    "items": "상품",
+    "status": "상태",
+    "total": "총액",
+    "order_details": "주문 상세",
+    "placed_on": "주문일",
+    "total_amount": "총 금액",
+    "payment_status": "결제 상태",
+    "track_order": "주문 추적",
+    "pay_now": "지금 결제",
+    "orders_found": "개 주문 발견",
+    "orders_selected": "개 주문 선택됨",
+    "delete_orders": "주문 삭제",
+    "delete_orders_confirm": "{{count}}개의 주문을 삭제하시겠습니까? 이 작업은 취소할 수 없습니다.",
+    "expires": "만료",
+    "add_payment_method": "새 결제 수단 추가",
+    "track": "추적"
   }
 }
