한글화 전체 작업 거의 완료

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -3,6 +3,14 @@
     "loading": "로딩 중...",
     "error_occurred": "오류가 발생했습니다. 다시 시도해주세요.",
     "search": "검색",
+    "search_products_here": "상품 검색하기...",
+    "searching_for": "\"{{query}}\" 검색 중...",
+    "nothing_matched_with": "다음과 일치하는 항목이 없습니다",
+    "please_try_again": "다시 시도해주세요.",
+    "trending_products": "인기 상품",
+    "in_category": "카테고리",
+    "hello": "안녕하세요",
+    "admin_dashboard": "관리자 대시보드",
     "filter": "필터",
     "sort": "정렬",
     "price": "가격",
@@ -28,6 +36,26 @@
     "close": "닫기",
     "open": "열기",
     "view": "보기",
+    "view_all": "모두 보기",
+    "view_more": "더보기",
+    "view_all_categories": "모든 카테고리 보기",
+    "view_all_products": "모든 상품 보기",
+    "browse_all_products": "모든 상품 보기",
+    "search_products": "상품 검색",
+    "cant_find_looking_for": "찾는 상품이 없으신가요?",
+    "browse_products_use_search": "모든 상품을 보거나 검색 기능을 사용하여 정확히 찾는 상품을 찾으세요.",
+    "please_login_to_view_cart": "장바구니를 보려면 로그인하세요",
+    "youve_seen_it_all": "🎉 모두 확인했습니다!",
+    "youve_explored_all_categories": "모든 {{count}}개 카테고리를 살펴봤습니다. 쇼핑을 시작할 준비가 되셨나요?",
+    "ready_to_shop": "쇼핑할 준비가 되셨나요?",
+    "no_products_available": "현재 이용 가능한 상품이 없습니다.",
+    "add_to_cart": "장바구니에 담기",
+    "adding": "추가 중...",
+    "added": "추가됨!",
+    "out_of_stock": "품절",
+    "in_cart": "장바구니에 있음",
+    "minimum_quantity": "최소 수량은 1입니다",
+    "shop_now": "지금 구매",
     "download": "다운로드",
     "upload": "업로드",
     "share": "공유",
@@ -123,10 +151,13 @@
     "december": "12월"
   },
   "navigation": {
+    "menu": "메뉴",
     "home": "홈",
     "products": "상품",
     "categories": "카테고리",
     "offers": "특가",
+    "cart": "장바구니",
+    "orders": "주문",
     "deals": "딜",
     "sale": "세일",
     "new_arrivals": "신상품",
@@ -153,9 +184,13 @@
   "auth": {
     "login": "로그인",
     "logout": "로그아웃",
+    "sign_out": "로그아웃",
+    "sign_out_of_account": "계정에서 로그아웃",
+    "view_profile": "프로필 보기",
     "register": "회원가입",
     "signup": "가입하기",
     "signin": "로그인하기",
+    "guests": "손님",
     "sign_in_with": "로그인",
     "sign_up_with": "가입하기",
     "email": "이메일",
@@ -199,7 +234,9 @@
     "login_history": "로그인 기록",
     "connected_accounts": "연결된 계정",
     "delete_account": "계정 삭제",
-    "deactivate_account": "계정 비활성화"
+    "deactivate_account": "계정 비활성화",
+    "logout_success": "성공적으로 로그아웃되었습니다!",
+    "logout_error": "로그아웃 중 오류가 발생했습니다"
   },
   "settings": {
     "title": "설정",
@@ -621,6 +658,316 @@
     "delete_orders_confirm": "{{count}}개의 주문을 삭제하시겠습니까? 이 작업은 취소할 수 없습니다.",
     "expires": "만료",
     "add_payment_method": "새 결제 수단 추가",
-    "track": "추적"
+    "track": "추적",
+    "edit_profile": "프로필 수정",
+    "years_with_us": "함께한 연수",
+    "current_user_info": "현재 사용자 정보 (스토어에서)",
+    "quick_actions": "빠른 작업",
+    "super_user_access": "슈퍼 사용자 액세스",
+    "id": "ID",
+    "name": "이름",
+    "email": "이메일",
+    "role": "역할",
+    "is_admin": "관리자 여부",
+    "is_authenticated": "인증 여부",
+    "provider": "제공자",
+    "created_at": "생성 일시",
+    "first_name": "이름",
+    "last_name": "성",
+    "phone": "전화",
+    "not_available": "이용 불가",
+    "not_provided": "제공되지 않음",
+    "yes": "예",
+    "no": "아니오",
+    "saved": "저장됨",
+    "profile": "프로필",
+    "full_name": "전체 이름",
+    "change_picture": "사진 변경",
+    "uploading": "업로드 중...",
+    "file_format_note": "JPG, GIF 또는 PNG. 최대 크기 5MB.",
+    "email_address": "이메일 주소",
+    "email_cannot_be_changed": "이메일은 변경할 수 없습니다",
+    "phone_number": "전화 번호",
+    "enter_full_name": "전체 이름을 입력하세요",
+    "enter_phone_number": "전화 번호를 입력하세요",
+    "password_settings": "비밀번호 설정",
+    "change_password": "비밀번호 변경",
+    "cancel": "취소",
+    "update_profile": "프로필 업데이트",
+    "updating": "업데이트 중...",
+    "current_password": "현재 비밀번호",
+    "enter_current_password": "현재 비밀번호를 입력하세요",
+    "new_password": "새 비밀번호",
+    "enter_new_password": "새 비밀번호를 입력하세요 (최소 6자)",
+    "confirm_new_password": "새 비밀번호 확인",
+    "confirm_password_input": "비밀번호를 확인하세요",
+    "name_required": "이름은 필수입니다",
+    "email_required": "이메일은 필수입니다",
+    "valid_email": "유효한 이메일을 입력하세요",
+    "valid_phone": "유효한 전화 번호를 입력하세요",
+    "current_password_required": "현재 비밀번호는 필수입니다",
+    "password_min_length": "새 비밀번호는 최소 6자여야 합니다",
+    "passwords_do_not_match": "비밀번호가 일치하지 않습니다",
+    "new_password_required": "새 비밀번호는 필수입니다",
+    "no_image": "이미지 없음",
+    "oauth_user": "OAuth 사용자:",
+    "oauth_description": "소셜 계정으로 로그인했습니다. 이메일/비밀번호 로그인도 사용 가능하도록 비밀번호를 설정할 수 있습니다."
+  },
+  "home": {
+    "shop_by_category": "카테고리별 쇼핑",
+    "discover_diverse_range": "다양한 범주에 걸쳐 제품의 다양한 범위를 발견하세요",
+    "discover_collections": "다양한 카테고리의 엄선된 컬렉션을 발견하세요",
+    "discover_products": "다양한 카테고리에서 광범위한 상품을 발견하세요",
+    "items": "개 이상",
+    "limited_time": "한정된 시간",
+    "up_to_off": "최대 50% 할인",
+    "mega_sale_event": "메가 세일 이벤트!",
+    "dont_miss_deals": "모든 카테고리에 걸쳐 놀라운 거래를 놓치지 마세요!",
+    "products_on_sale": "판매 중인 상품",
+    "max_discount": "최대 할인",
+    "deals_30_off": "30% 이상 할인",
+    "unable_to_load_categories": "현재 카테고리를 로드할 수 없습니다. 나중에 다시 시도해주세요."
+  },
+  "offers": {
+    "title": "특가 상품",
+    "description": "놓치지 마세요! 최대 {{discount}}% 할인으로 고객님의 선호 상품에서 큰 금액을 절약하세요.",
+    "breadcrumb_offers": "특가",
+    "products_on_sale": "판매 중인 상품",
+    "average_discount": "평균 할인",
+    "maximum_discount": "최대 할인",
+    "exclusive_deals": "독점 거래",
+    "mega_sale_event": "🔥 메가 세일 이벤트!",
+    "hurry_up_deals": "서둘러요! 이 놀라운 거래들은 영원하지 않습니다.",
+    "limited_time": "한정된 시간",
+    "exclusive": "독점",
+    "electronics_off": "전자제품 40% 할인",
+    "fashion_off": "의류 35% 할인",
+    "beauty_off": "뷰티 50% 할인",
+    "offers_found": "{{count}}개 상품 발견",
+    "clear_all_filters": "모든 필터 초기화",
+    "filters": "필터",
+    "highest_discount": "최고 할인율",
+    "lowest_discount": "최저 할인율",
+    "price_low_to_high": "가격: 낮음 > 높음",
+    "price_high_to_low": "가격: 높음 > 낮음",
+    "name_a_to_z": "상품명: A > Z",
+    "highest_rated": "평점 높은 순",
+    "category": "카테고리",
+    "all_categories": "모든 카테고리",
+    "minimum_discount": "최소 할인율",
+    "any_discount": "모든 할인",
+    "percent_10_or_more": "10% 이상",
+    "percent_20_or_more": "20% 이상",
+    "percent_30_or_more": "30% 이상",
+    "percent_40_or_more": "40% 이상",
+    "percent_50_or_more": "50% 이상",
+    "percent_off": "% 할인",
+    "load_more_offers": "더 많은 상품 보기",
+    "no_offers_found": "발견된 상품이 없습니다",
+    "try_adjusting_filters": "필터를 조정하거나 나중에 다시 확인해주세요.",
+    "clear_filters": "필터 초기화"
+  },
+  "categories": {
+    "bestsellers": "베스트셀러",
+    "new_arrivals": "신상품",
+    "special_offers": "특별 할인",
+    "electronics": "전자제품",
+    "fashion": "의류",
+    "beauty": "뷰티",
+    "home_living": "가정용품",
+    "smartphones_gadgets": "최신 스마트폰 및 가젯",
+    "clothing_accessories": "트렌디한 의류 및 액세서리",
+    "premium_beauty": "프리미엄 뷰티 제품",
+    "furniture_decor": "가구 및 홈 데코",
+    "sports": "스포츠",
+    "sports_gear": "스포츠 장비 및 액세서리",
+    "jewelry": "주얼리",
+    "beautiful_jewelry": "아름다운 주얼리 컬렉션",
+    "watches": "시계",
+    "elegant_timepieces": "우아한 타임피스",
+    "bags": "가방",
+    "stylish_bags": "스타일리시한 가방 및 핸드백",
+    "beauty_name": "뷰티",
+    "beauty_desc": "프리미엄 뷰티 제품 및 화장품",
+    "fragrances_name": "향수",
+    "fragrances_desc": "고급 향수 및 향료",
+    "furniture_name": "가구",
+    "furniture_desc": "집을 위한 스타일리시한 가구",
+    "groceries_name": "식품",
+    "groceries_desc": "신선한 식품 및 필수품",
+    "home_decoration_name": "홈 데코",
+    "home_decoration_desc": "아름다운 홈 데코 아이템",
+    "kitchen_accessories_name": "주방용품",
+    "kitchen_accessories_desc": "필수 주방 도구",
+    "laptops_name": "노트북",
+    "laptops_desc": "고성능 노트북",
+    "mens_shirts_name": "남성 셔츠",
+    "mens_shirts_desc": "남성용 스타일리시한 셔츠",
+    "mens_shoes_name": "남성 신발",
+    "mens_shoes_desc": "편안하고 유행스러운 신발",
+    "mens_watches_name": "남성 시계",
+    "mens_watches_desc": "남성용 우아한 타임피스",
+    "mobile_accessories_name": "휴대폰 액세서리",
+    "mobile_accessories_desc": "모바일 기기 액세서리",
+    "motorcycle_name": "오토바이",
+    "motorcycle_desc": "오토바이 기어 및 액세서리",
+    "skin_care_name": "스킨케어",
+    "skin_care_desc": "프리미엄 스킨케어 제품",
+    "smartphones_name": "스마트폰",
+    "smartphones_desc": "최신 스마트폰 및 기기",
+    "sports_accessories_name": "스포츠 액세서리",
+    "sports_accessories_desc": "스포츠 용품 및 장비",
+    "sunglasses_name": "선글라스",
+    "sunglasses_desc": "스타일리시한 안경 및 선글라스",
+    "tablets_name": "태블릿",
+    "tablets_desc": "태블릿 및 디지털 액세서리",
+    "tops_name": "상의",
+    "tops_desc": "트렌디한 상의 및 캐주얼 의류",
+    "vehicle_name": "자동차",
+    "vehicle_desc": "자동차 액세서리 및 부품",
+    "womens_bags_name": "여성 가방",
+    "womens_bags_desc": "패셔너블한 가방 및 핸드백",
+    "womens_dresses_name": "여성 드레스",
+    "womens_dresses_desc": "모든 경우에 적합한 우아한 드레스",
+    "womens_jewellery_name": "여성 주얼리",
+    "womens_jewellery_desc": "아름다운 주얼리 및 액세서리",
+    "womens_shoes_name": "여성 신발",
+    "womens_shoes_desc": "여성용 스타일리시한 신발",
+    "womens_watches_name": "여성 시계",
+    "womens_watches_desc": "여성용 우아한 시계"
+  },
+  "footer": {
+    "my_account": "마이 계정",
+    "information": "정보",
+    "talk_to_us": "문의하기",
+    "about_us": "우리는 고품질의 웹사이트를 만드는 디자이너 및 개발자 팀입니다",
+    "got_questions": "질문이 있으신가요?",
+    "call_us": "문의하세요"
+  },
+  "products": {
+    "all_products": "모든 상품",
+    "product_listing": "상품 목록",
+    "product_header": "상품",
+    "breadcrumb_home": "홈",
+    "breadcrumb_products": "상품",
+    "breadcrumb_separator": "/",
+    "found_products": "{{count}}개 상품 찾음",
+    "discover_collection": "{{count}}개 상품의 전체 컬렉션 발견",
+    "search_results_for": "\"{{query}}\" 검색 결과",
+    "showing_products": "{{displayed}} / {{total}}개 상품 표시",
+    "sort_by": "정렬:",
+    "sort_default": "기본 정렬",
+    "sort_price_low": "가격: 낮은순",
+    "sort_price_high": "가격: 높은순",
+    "sort_name_asc": "이름: 가나다순",
+    "sort_name_desc": "이름: 하바타순",
+    "sort_rating": "평점 높은순",
+    "grid_view": "그리드 보기",
+    "list_view": "리스트 보기",
+    "no_products_found": "검색 기준에 맞는 상품이 없습니다.",
+    "end_of_list": "상품 목록 끝에 도달했습니다.",
+    "loading_more": "더 많은 상품을 불러오는 중...",
+    "category_section": "카테고리별 쇼핑",
+    "best_sellers": "베스트셀러",
+    "new_arrivals": "신상품",
+    "special_offers": "특별 할인"
+  },
+  "categories": {
+    "bestsellers": "베스트셀러",
+    "new_arrivals": "신상품",
+    "special_offers": "특별 할인",
+    "shop_by_categories": "카테고리별 쇼핑",
+    "page_title": "카테고리별 쇼핑",
+    "page_description": "당사의 광범위한 상품 카테고리를 발견하세요. 당사의 정성스럽게 큐레이션된 컬렉션에서 찾는 정확한 상품을 찾아보세요.",
+    "breadcrumb_home": "홈",
+    "breadcrumb_categories": "카테고리",
+    "total_categories": "전체 카테고리",
+    "total_products": "상품 수",
+    "total_brands": "브랜드 수",
+    "items": "개",
+    "out_of_stock": "품절",
+    "currently_no_products": "현재 사용 가능한 상품이 없습니다",
+    "view_products": "상품 보기",
+    "not_available": "사용 불가",
+    "loading_categories": "더 많은 카테고리를 로드 중...",
+    "seen_all_categories": "🎉 모두 확인했습니다!",
+    "explored_all_categories": "모든 {{count}}개 카테고리를 살펴봤습니다. 쇼핑을 시작할 준비가 되셨나요?",
+    "browse_all_categories": "모든 상품 보기",
+    "electronics": "전자제품",
+    "fashion": "의류",
+    "beauty": "뷰티",
+    "beauty_desc": "고급 뷰티 제품 및 화장품을 살펴보세요",
+    "fragrances": "향수",
+    "fragrances_desc": "고급 향수 및 퍼퓸을 발견하세요",
+    "furniture": "가구",
+    "furniture_desc": "세련된 가구로 당신의 공간을 변신시키세요",
+    "groceries": "식료품",
+    "groceries_desc": "신선한 식료품 및 일상용품",
+    "home_decoration": "홈 데코레이션",
+    "home_decoration_desc": "집에 어울리는 아름다운 장식품",
+    "kitchen": "주방",
+    "kitchen_desc": "주방에 필수적인 도구",
+    "laptops": "노트북",
+    "laptops_desc": "고성능 노트북 및 컴퓨터",
+    "mens_shirts": "남성 셔츠",
+    "mens_shirts_desc": "현대적인 남성을 위한 세련된 셔츠",
+    "mens_shoes": "남성 신발",
+    "mens_shoes_desc": "편하고 패셔너블한 신발",
+    "mens_watches": "남성 시계",
+    "mens_watches_desc": "남성용 우아한 시계",
+    "mobile_accessories": "휴대폰 액세서리",
+    "mobile_accessories_desc": "휴대폰 기기용 액세서리",
+    "motorcycle": "오토바이",
+    "motorcycle_desc": "오토바이 장비 및 액세서리",
+    "skin_care": "스킨케어",
+    "skin_care_desc": "프리미엄 스킨케어 제품",
+    "smartphones": "스마트폰",
+    "smartphones_desc": "최신 스마트폰 및 기기",
+    "sports_accessories": "스포츠 액세서리",
+    "sports_accessories_desc": "좋아하는 스포츠를 위해 준비하세요",
+    "sunglasses": "선글라스",
+    "sunglasses_desc": "세련된 안경 및 선글라스",
+    "tablets": "태블릿",
+    "tablets_desc": "태블릿 및 디지털 액세서리",
+    "tops": "상의",
+    "tops_desc": "트렌디한 상의 및 캐주얼 의류",
+    "vehicle": "자동차",
+    "vehicle_desc": "자동차 액세서리 및 부품",
+    "womens_bags": "여성 가방",
+    "womens_bags_desc": "패셔너블한 가방 및 핸드백",
+    "womens_dresses": "여성 드레스",
+    "womens_dresses_desc": "모든 경우에 어울리는 우아한 드레스",
+    "womens_jewellery": "여성 주얼리",
+    "womens_jewellery_desc": "아름다운 주얼리 및 액세서리",
+    "womens_shoes": "여성 신발",
+    "womens_shoes_desc": "여성용 세련된 신발",
+    "womens_watches": "여성 시계",
+    "womens_watches_desc": "여성용 우아한 시계"
+  },
+  "filters": {
+    "filters_title": "필터",
+    "shop_by_category": "카테고리별 쇼핑",
+    "shop_by_color": "색상별 쇼핑",
+    "shop_by_brand": "브랜드별 쇼핑",
+    "shop_by_price": "가격별 쇼핑",
+    "no_colors": "사용 가능한 색상이 없습니다"
+  },
+  "shipping_modal": {
+    "title": "무료 배송",
+    "subtitle": "빠르고 신뢰할 수 있는 배송 서비스",
+    "free_on_orders": "₩{{amount}} 이상 주문 시 무료배송",
+    "free_shipping_description": "₩{{amount}} 이상의 모든 주문에 대해 무료배송을 이용하세요",
+    "delivery_time": "배송 시간",
+    "delivery_time_description": "오전 12시(정오)까지 주문 시 당일 출고",
+    "coverage_area": "배송 지역",
+    "coverage_area_description": "수도권 전지역 익일 도착률 97%, 그 외 지역 2~3일 이내 도착",
+    "tracking": "추적",
+    "tracking_description": "모든 배송 상황을 송장번호로 확인할 수 있습니다",
+    "terms_and_conditions": "배송 안내",
+    "term_1": "무료 배송 혜택은 한국 내 배송에만 적용됩니다",
+    "term_2": "특수 상품은 추가 요금이 발생할 수 있습니다",
+    "term_3": "오전 12시(정오)까지 주문한 상품은 같은 영업일에 배송됩니다",
+    "term_4": "주말 및 휴일 주문은 다음 영업일에 배송됩니다",
+    "close_button": "닫기"
   }
 }
