--- a/src/locales/ko-extended.json
+++ b/src/locales/ko-extended.json
@@ -127,6 +127,72 @@
     "scheduled": "예약",
     "custom": "사용자 정의"
   },
+  "account": {
+    "title": "프로필 수정",
+    "edit_profile": "프로필 수정",
+    "full_name": "성명",
+    "enter_full_name": "성명을 입력하세요",
+    "email_address": "이메일 주소",
+    "email_cannot_be_changed": "이메일은 변경할 수 없습니다",
+    "phone_number": "전화번호",
+    "enter_phone_number": "전화번호를 입력하세요",
+    "change_picture": "사진 변경",
+    "uploading": "업로드 중...",
+    "file_format_note": "JPG, GIF 또는 PNG. 최대 크기 5MB.",
+    "no_image": "이미지 없음",
+    "password_settings": "비밀번호 설정",
+    "change_password": "비밀번호 변경",
+    "current_password": "현재 비밀번호",
+    "enter_current_password": "현재 비밀번호를 입력하세요",
+    "new_password": "새 비밀번호",
+    "enter_new_password": "새 비밀번호를 입력하세요",
+    "confirm_new_password": "새 비밀번호 확인",
+    "confirm_new_password_placeholder": "새 비밀번호를 다시 입력하세요",
+    "update_profile": "프로필 업데이트",
+    "updating": "업데이트 중...",
+    "cancel": "취소",
+    "name_required": "성명을 입력해주세요",
+    "email_required": "이메일을 입력해주세요",
+    "valid_email": "유효한 이메일 주소를 입력해주세요",
+    "valid_phone": "유효한 전화번호를 입력해주세요",
+    "current_password_required": "현재 비밀번호를 입력해주세요",
+    "password_min_length": "비밀번호는 최소 6자 이상이어야 합니다",
+    "passwords_do_not_match": "비밀번호가 일치하지 않습니다",
+    "new_password_required": "새 비밀번호를 입력해주세요",
+    "oauth_user": "소셜 로그인 사용자",
+    "oauth_description": "소셜 로그인으로 가입한 계정입니다. 비밀번호 설정이 필요하지 않습니다.",
+    "total_orders": "총 주문",
+    "saved_addresses": "저장된 주소",
+    "years_with_us": "함께한 년수",
+    "current_user_info": "현재 사용자 정보",
+    "id": "ID",
+    "not_available": "이용 불가",
+    "name": "이름",
+    "email": "이메일",
+    "role": "역할",
+    "is_admin": "관리자 여부",
+    "yes": "예",
+    "no": "아니오",
+    "is_authenticated": "인증 여부",
+    "provider": "제공자",
+    "created_at": "생성일",
+    "profile": "프로필",
+    "first_name": "이름",
+    "last_name": "성",
+    "phone": "전화번호",
+    "addresses": "주소",
+    "saved": "저장됨",
+    "not_provided": "제공되지 않음",
+    "quick_actions": "빠른 작업",
+    "admin_dashboard": "관리자 대시보드",
+    "super_user_access": "슈퍼 유저 접근",
+    "manage_addresses": "주소 관리",
+    "order_history": "주문 내역",
+    "payment_methods": "결제 수단",
+    "manage_payment": "결제 수단 관리",
+    "settings": "설정",
+    "manage_security": "보안 관리"
+  },
   "orders": {
     "title": "주문 내역",
     "my_orders": "내 주문",
