카테고리 개발 단계 최종 정리

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -795,8 +795,8 @@
     "stylish_bags": "스타일리시한 가방 및 핸드백",
     "beauty_name": "뷰티",
     "beauty_desc": "프리미엄 뷰티 제품 및 화장품",
-    "fragrances_name": "향수",
-    "fragrances_desc": "고급 향수 및 향료",
+    "fragrances_name": "향수병",
+    "fragrances_desc": "고급 향수 및 퍼품",
     "furniture_name": "가구",
     "furniture_desc": "집을 위한 스타일리시한 가구",
     "groceries_name": "식품",
@@ -903,8 +903,8 @@
     "fashion": "의류",
     "beauty": "뷰티",
     "beauty_desc": "고급 뷰티 제품 및 화장품을 살펴보세요",
-    "fragrances": "향수",
-    "fragrances_desc": "고급 향수 및 퍼퓸을 발견하세요",
+    "fragrances": "향수병",
+    "fragrances_desc": "고급 향수 및 퍼품을 발견하세요",
     "furniture": "가구",
     "furniture_desc": "세련된 가구로 당신의 공간을 변신시키세요",
     "groceries": "식료품",
