결제 테스트 까지 작업

--- a/src/locales/ko-extended.json
+++ b/src/locales/ko-extended.json
@@ -60,6 +60,17 @@
     "store_credit": "적립금",
     "points": "포인트",
     "cash_on_delivery": "착불",
+    "cash_on_delivery_desc": "배송받을 때 결제",
+    "pay_with_card": "카드로 결제",
+    "secure_payment_via_stripe": "Stripe을 통한 안전한 결제",
+    "toss_payments": "토스페이먼츠",
+    "toss_payments_desc": "간편한 결제 (신용카드, 계좌이체, 핸드폰 등)",
+    "choose_payment_method": "결제 방법 선택",
+    "select_payment_method": "결제 방법 선택",
+    "confirm_cash_on_delivery": "착불 확인",
+    "processing": "처리 중...",
+    "order_items": "상품 ({{count}})",
+    "total_amount": "총액",
     "installment": "할부",
     "monthly_payment": "월 결제",
     "pay_in_full": "일시불",
@@ -191,7 +202,23 @@
     "payment_methods": "결제 수단",
     "manage_payment": "결제 수단 관리",
     "settings": "설정",
-    "manage_security": "보안 관리"
+    "manage_security": "보안 관리",
+    "order_details": "주문 상세",
+    "placed_on": "주문일",
+    "status": "상태",
+    "payment_status": "결제 상태",
+    "items": "상품",
+    "pay_now": "지금 결제",
+    "track_order": "주문 조회",
+    "total_amount": "총액",
+    "order": "주문",
+    "total": "총액",
+    "error_loading_orders": "주문 내역을 불러오는 중 오류가 발생했습니다",
+    "no_orders_yet": "아직 주문이 없습니다",
+    "no_orders_desc": "아직 구매한 상품이 없습니다. 쇼핑을 시작해보세요!",
+    "track_manage_orders": "주문 상태를 추적하고 주문을 관리하세요",
+    "orders_found": "개의 주문",
+    "orders_selected": "개의 주문 선택됨"
   },
   "orders": {
     "title": "주문 내역",
@@ -230,6 +257,8 @@
     "status_refunded": "환불 완료",
     "status_failed": "주문 실패",
     "status_on_hold": "보류",
+    "payment_status_pending": "결제 대기 중",
+    "payment_status_paid": "결제 완료",
     "cancel_order": "주문 취소",
     "modify_order": "주문 변경",
     "reorder": "재주문",
