--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -650,13 +650,43 @@
     "no_orders_yet": "아직 주문이 없습니다",
     "no_orders_desc": "아직 주문을 하지 않으셨습니다. 쇼핑을 시작하여 주문 내역을 확인하세요.",
     "order": "주문",
-    "items": "상품",
+    "items": "상품 ({{count}})",
     "status": "상태",
     "total": "총액",
     "order_details": "주문 상세",
-    "placed_on": "주문일",
+    "order_number": "주문번호",
+    "placed_on": "주문일: {{date}}",
+    "download_receipt": "영수증 다운로드",
+    "status.confirmed": "주문 확인",
+    "status.pending": "대기 중",
+    "status.packed": "포장 완료",
+    "status.out_for_delivery": "배송 출발",
+    "status.delivered": "배송 완료",
+    "status.cancelled": "주문 취소",
+    "status.unknown": "알 수 없음",
+    "payment_status_label": "결제 상태",
+    "payment_status.paid": "결제 완료",
+    "payment_status.pending": "결제 대기 중",
+    "payment_status.failed": "결제 실패",
+    "payment_status.refunded": "환불 완료",
+    "payment_method.cash_on_delivery": "착불",
+    "order_date": "주문 날짜",
+    "order_summary": "주문 요약",
     "total_amount": "총 금액",
-    "payment_status": "결제 상태",
+    "qty": "수량",
+    "need_help": "도움이 필요하신가요?",
+    "call_support": "고객 지원 전화",
+    "email_support": "이메일 지원",
+    "order_tracking": "주문 추적",
+    "processing": "처리 중",
+    "shipped": "배송됨",
+    "delivered": "배송 완료",
+    "your_order_is_currently_being": "귀하의 주문은 현재",
+    "estimated_delivery": "예상 배송일",
+    "shipping_address": "배송 주소",
+    "back_to_account": "계정으로 돌아가기",
+    "order_not_found": "주문을 찾을 수 없습니다",
+    "loading_order_details": "주문 세부 정보 로딩 중...",
     "track_order": "주문 추적",
     "pay_now": "지금 결제",
     "orders_found": "개 주문 발견",
