푸터 정보 전부 수정, 토스페이먼츠 테스트 결제 완료

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -394,8 +394,7 @@
     "delivery": "배송",
     "packaging": "포장",
     "overall": "전체적으로",
-    "you_are_saving": "절약하는 금액",
-    "upon_purchase": "구매시",
+    "discount_message": "원을 할인 받아 구매 할 수 있습니다!",
     "guaranteed_safe_secure_checkout": "안전하고 보안된 결제 보장",
     "tags": "태그",
     "max_stock_reached": "재고 수량을 초과할 수 없습니다!"
@@ -550,8 +549,9 @@
     "free_shipping": "무료배송",
     "free": "무료",
     "congratulations_free_shipping": "🎉 축하합니다! 무료배송 대상입니다!",
-    "add_more_for_free_shipping": "무료배송을 위해 {{amount}} 더 추가하세요!",
-    "free_shipping_on_orders_over": "{{amount}} 이상 주문시 무료배송",
+    "add_more_for_free_shipping": "무료배송을 위해",
+    "add_more_for_free_shipping_suffix": "더 추가하세요!",
+    "free_shipping_on_orders_over": "이상 주문시 무료배송",
     "select_address_to_checkout": "배송 주소를 선택하여 주문하세요",
     "login_to_order": "주문하려면 로그인하세요",
     "placing_order": "주문 처리 중...",
@@ -877,9 +877,28 @@
     "my_account": "마이 계정",
     "information": "정보",
     "talk_to_us": "문의하기",
-    "about_us": "우리는 고품질의 웹사이트를 만드는 디자이너 및 개발자 팀입니다",
+    "about_us": "겟꿀쇼핑은 최고의 상품을 최저가로 제공하는 대한민국 대표 온라인 쇼핑몰입니다",
     "got_questions": "질문이 있으신가요?",
-    "call_us": "문의하세요"
+    "call_us": "문의하세요",
+    "phone": "010-7218-2858",
+    "email": "jgdglobal@kakao.com",
+    "address": "인천광역시 연수구 송도과학로 32, 엠동 2201호(송도동, 송도테크노파크 IT센터)",
+    "hotline": "고객센터",
+    "business_registration": "사업자등록번호",
+    "business_number": "308-86-03448",
+    "telecom_sales": "통신판매신고번호",
+    "telecom_number": "제 2025-인천연수구-2051 호",
+    "representative": "대표자",
+    "representative_name": "전은찬",
+    "copyright": "© 2025 겟꿀쇼핑. All rights reserved.",
+    "privacy_officer": "개인정보보호책임자",
+    "privacy_officer_name": "백인희",
+    "terms_of_service": "이용약관",
+    "privacy_policy": "개인정보처리방침",
+    "customer_service": "고객센터",
+    "faq": "자주하는질문",
+    "inquiry": "문의하기",
+    "about_us_page": "회사소개"
   },
   "products": {
     "all_products": "모든 상품",
