--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -884,6 +884,7 @@
     "email": "jgdglobal@kakao.com",
     "address": "인천광역시 연수구 송도과학로 32, 엠동 2201호(송도동, 송도테크노파크 IT센터)",
     "hotline": "고객센터",
+    "company_name": "주식회사 제이지디글로벌",
     "business_registration": "사업자등록번호",
     "business_number": "308-86-03448",
     "telecom_sales": "통신판매신고번호",
