한글화 작업 전체적으로 완료

--- a/src/locales/ko-extended.json
+++ b/src/locales/ko-extended.json
@@ -1,10 +1,28 @@
 {
+  "shipping_modal": {
+    "title": "무료 배송 안내",
+    "subtitle": "겟꿀 쇼핑의 배송 정책을 확인하세요",
+    "free_on_orders": "{{amount}} 이상 주문 시 무료 배송",
+    "free_shipping_description": "{{amount}} 이상 주문 시 전국 무료 배송 혜택을 받으실 수 있습니다",
+    "delivery_time": "배송 소요 시간",
+    "delivery_time_description": "결제 완료 후 1-3일 이내 배송됩니다 (도서산간 지역 제외)",
+    "coverage_area": "배송 가능 지역",
+    "coverage_area_description": "전국 모든 지역으로 배송 가능합니다 (일부 도서산간 지역 추가 요금)",
+    "tracking": "배송 추적",
+    "tracking_description": "주문 확인 후 배송 추적 번호가 제공됩니다",
+    "terms_and_conditions": "배송 관련 유의사항",
+    "term_1": "배송 기간은 결제 완료 후 영업일 기준입니다",
+    "term_2": "도서산간 지역은 추가 1-2일이 소요될 수 있습니다",
+    "term_3": "천재지변, 명절 기간에는 배송이 지연될 수 있습니다",
+    "term_4": "정확한 배송일은 주문 후 문자로 안내됩니다",
+    "close_button": "닫기"
+  },
   "checkout": {
     "title": "주문/결제",
     "checkout_process": "결제 과정",
     "step": "단계",
     "step_1": "1단계",
-    "step_2": "2단계", 
+    "step_2": "2단계",
     "step_3": "3단계",
     "step_4": "4단계",
     "shipping_info": "배송 정보",
@@ -110,7 +128,7 @@
     "review_reminders": "리뷰 알림",
     "back_in_stock": "재입고 알림",
     "price_drop": "가격 인하 알림",
-    "wishlist_updates": "위시리스트 업데이트",
+    "wishlist_updates": "관심 상품 업데이트",
     "account_security": "계정 보안",
     "login_alerts": "로그인 알림",
     "password_changes": "비밀번호 변경",
@@ -141,6 +159,7 @@
   "account": {
     "title": "프로필 수정",
     "edit_profile": "프로필 수정",
+    "admin_dashboard": "관리자 대시보드",
     "full_name": "성명",
     "enter_full_name": "성명을 입력하세요",
     "email_address": "이메일 주소",
@@ -195,18 +214,41 @@
     "saved": "저장됨",
     "not_provided": "제공되지 않음",
     "quick_actions": "빠른 작업",
-    "admin_dashboard": "관리자 대시보드",
-    "super_user_access": "슈퍼 유저 접근",
     "manage_addresses": "주소 관리",
+    "manage_addresses_desc": "배송지 정보를 확인하고 관리하세요.",
+    "add_new_address": "새 주소 추가",
+    "default_address": "기본 배송지",
+    "no_addresses": "저장된 주소가 없습니다.",
+    "no_addresses_desc": "주문을 위해 배송지 정보를 추가해주세요.",
+    "add_first_address": "첫 번째 주소 추가하기",
+    "edit_address": "주소 수정",
+    "add_address": "주소 추가",
+    "recipient_name": "받는사람",
+    "recipient_placeholder": "받는사람 이름",
+    "search_address": "주소 검색",
+    "zipcode": "우편번호",
+    "search_address_first": "주소 검색 후 자동 입력",
+    "address": "주소",
+    "detail_address": "상세주소",
+    "detail_address_placeholder": "예: 101호, 아파트 이름 등",
+    "entrance_code": "공동현관 출입번호",
+    "entrance_code_placeholder": "예: 1234",
+    "entrance_code_notice": "입력된 공동현관 출입번호는 배송을 위해 필요한 기간 동안 보관합니다.",
+    "set_as_default": "기본 배송지로 설정",
+    "delivery_request_notice": "사회적 거리두기를 위해, 모든 배송을 비대면으로 진행합니다.",
+    "recipient_required": "받는사람은 필수입니다",
+    "phone_required": "전화번호는 필수입니다",
+    "zipcode_required": "우편번호는 필수입니다",
+    "address_required": "주소는 필수입니다",
+    "detail_address_required": "상세주소는 필수입니다",
     "order_history": "주문 내역",
     "payment_methods": "결제 수단",
-    "manage_payment": "결제 수단 관리",
+    "manage_payment": "결제 정보 및 수단을 관리하세요",
     "settings": "설정",
     "manage_security": "보안 관리",
     "order_details": "주문 상세",
     "placed_on": "주문일",
     "status": "상태",
-    "payment_status": "결제 상태",
     "items": "상품",
     "pay_now": "지금 결제",
     "track_order": "주문 조회",
@@ -218,7 +260,49 @@
     "no_orders_desc": "아직 구매한 상품이 없습니다. 쇼핑을 시작해보세요!",
     "track_manage_orders": "주문 상태를 추적하고 주문을 관리하세요",
     "orders_found": "개의 주문",
-    "orders_selected": "개의 주문 선택됨"
+    "orders_selected": "개의 주문 선택됨",
+    "account_settings": "계정 설정",
+    "privacy_security": "보안 및 개인정보",
+    "delete_account": "계정 삭제",
+    "delete_account_warning": "정말로 계정을 삭제하시겠습니까? 이 작업은 되돌릴 수 없으며 모든 데이터가 영구적으로 삭제됩니다.",
+    "two_factor_auth": "2단계 인증",
+    "two_factor_auth_desc": "계정에 추가 보안 계층을 추가하세요",
+    "login_activity": "로그인 활동",
+    "login_activity_desc": "최근 로그인 시도 및 활성 세션을 확인하세요",
+    "export_data": "데이터 내보내기",
+    "export_data_desc": "계정 데이터 사본을 다운로드하세요",
+    "account_actions": "계정 작업",
+    "logout_desc": "이 기기에서 계정을 로그아웃합니다",
+    "delete_account_desc": "계정 및 모든 관련 데이터를 영구적으로 삭제합니다",
+    "last_updated": "마지막 업데이트",
+    "notification_settings": "알림 설정",
+    "manage_notifications": "알림 수신 방법을 관리하세요",
+    "receive_notifications": "알림 받기",
+    "email_notifications": "이메일 알림",
+    "email_notifications_desc": "이메일을 통해 주문 업데이트 및 계정 알림을 받으세요",
+    "sms_notifications": "SMS 알림",
+    "sms_notifications_desc": "문자 메시지로 중요한 업데이트를 받으세요",
+    "order_updates": "주문 업데이트",
+    "order_updates_desc": "주문 상태, 배송 및 배달에 대한 알림",
+    "promotions": "프로모션",
+    "promotions_desc": "특별 거래, 할인 및 프로모션 콘텐츠",
+    "save_preferences": "설정 저장",
+    "default_address_updated": "기본 배송지가 업데이트되었습니다.",
+    "address_added": "배송지가 추가되었습니다.",
+    "address_updated": "배송지가 수정되었습니다.",
+    "address_deleted": "배송지가 삭제되었습니다.",
+    "delete_address_confirm": "이 배송지를 삭제하시겠습니까?",
+    "failed_to_update_default": "기본 배송지 업데이트에 실패했습니다.",
+    "failed_to_add_address": "배송지 추가에 실패했습니다.",
+    "failed_to_update_address": "배송지 수정에 실패했습니다.",
+    "failed_to_delete_address": "배송지 삭제에 실패했습니다.",
+    "delivery_request": "배송 요청사항",
+    "dashboard": "대시보드",
+    "manage_system": "시스템 관리",
+    "my_account": "마이페이지",
+    "manage_profile": "프로필 관리",
+    "select_section": "항목 선택",
+    "track": "조회"
   },
   "orders": {
     "title": "주문 내역",
@@ -257,6 +341,13 @@
     "status_refunded": "환불 완료",
     "status_failed": "주문 실패",
     "status_on_hold": "보류",
+    "status_취소": "주문 취소",
+    "status_처리중": "처리 중",
+    "status_배송중": "배송 중",
+    "status_완료": "배송 완료",
+    "status_환불": "환불 완료",
+    "status_대기중": "대기 중",
+    "status_준비중": "준비 중",
     "payment_status_pending": "결제 대기 중",
     "payment_status_paid": "결제 완료",
     "cancel_order": "주문 취소",
@@ -325,6 +416,60 @@
     "allergic_reaction": "알레르기 반응",
     "medical_reason": "의료상 이유",
     "personal_reason": "개인적 사유",
-    "other_reason": "기타 사유"
+    "other_reason": "기타 사유",
+    "cancelling": "취소 중...",
+    "cancel_confirm_title": "주문 취소 확인",
+    "cancel_confirm_message": "정말로 이 주문을 취소하시겠습니까?",
+    "refund_info": "결제가 취소되고 환불이 진행됩니다.",
+    "cancel_success": "주문이 성공적으로 취소되었습니다.",
+    "cancel_failed": "주문 취소에 실패했습니다.",
+    "delete_success": "주문이 삭제되었습니다.",
+    "delete_failed": "삭제 실패",
+    "delete_confirm_title": "주문 삭제 확인",
+    "delete_confirm_message": "정말로 선택한 주문을 삭제하시겠습니까?",
+    "orders_deleted": "개의 주문이 삭제되었습니다.",
+    "order_cancel_error": "주문 취소 중 오류가 발생했습니다.",
+    "order_delete_error": "주문 삭제 중 오류가 발생했습니다.",
+    "customer_request_cancel": "고객 요청에 의한 취소",
+    "pay_now": "지금 결제"
+  },
+  "settings": {
+    "title": "설정",
+    "myProfile": "내 프로필",
+    "myProfileDesc": "프로필 정보를 수정하세요",
+    "myOrders": "내 주문 내역",
+    "myOrdersDesc": "주문 내역과 배송 상태를 확인하세요",
+    "wishlist": "관심 상품",
+    "wishlistDesc": "저장한 관심 상품을 확인하세요",
+    "addresses": "배송지 관리",
+    "addressesDesc": "배송지 정보 및 기본 배송지를 관리하세요",
+    "paymentMethods": "결제 수단",
+    "paymentMethodsDesc": "결제 정보를 관리하세요",
+    "notifications": "알림 설정",
+    "notificationsDesc": "이메일 및 알림 설정을 관리하세요",
+    "privacySecurity": "보안 및 개인정보",
+    "privacySecurityDesc": "계정 보안 및 설정을 관리하세요",
+    "reviews": "내 리뷰",
+    "reviewsDesc": "작성한 상품 리뷰를 관리하세요",
+    "helpSupport": "고객 센터",
+    "helpSupportDesc": "도움말 및 지원팀에 문의하세요"
+  },
+  "wishlist": {
+    "title": "관심 상품",
+    "items_count": "{{count}}개의 상품이 있습니다",
+    "clear_all": "전체 삭제",
+    "clear_all_confirm": "정말로 관심 상품을 비우시겠습니까?",
+    "cleared_success": "관심 상품이 비워졌습니다",
+    "removed_success": "관심 상품에서 삭제되었습니다",
+    "added_to_cart_success": "장바구니에 담았습니다!",
+    "sign_in_required": "로그인이 필요합니다",
+    "sign_in_desc": "관심 상품을 보려면 로그인해주세요",
+    "sign_in_button": "로그인",
+    "empty_title": "관심 상품이 없습니다",
+    "empty_desc": "마음에 드는 상품의 하트 아이콘을 클릭하여 관심 상품에 담아보세요",
+    "browse_products": "상품 보러가기",
+    "continue_shopping": "쇼핑 계속하기",
+    "remove_tooltip": "삭제",
+    "view_details_tooltip": "상세 보기"
   }
 }
