--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -199,6 +199,15 @@
         "address": "仁川广域市延寿区松岛科学路32号，M栋 2201号（松岛洞，松岛科技园 IT 中心）",
         "copyright": "© 2025 Getkkul. 保留所有权利。"
     },
+    "product": {
+        "in_stock": "有货",
+        "you_are_saving": "您节省了",
+        "upon_purchase": "！",
+        "select_option": "请选择一个选项！",
+        "out_of_stock": "该商品已售罄！",
+        "max_stock_reached": "不能超过库存数量！",
+        "discount_message": " 折扣"
+    },
     "products": {
         "all_products": "所有商品",
         "product_header": "商品",
